tests/gabc-dump/should-fail/unopened-over-ledger.gabc
name: unopened over-staff ledger line;
%%
(c4) g(g) h(h[oll:}])
